--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* adress bar */
 
+/* adress bar */
 .address-bar {
   display: flex;
   justify-content: center;
@@ -31,6 +31,13 @@ body {
 .user__form {
   background: none;
   border: none;
+  outline: none;
+}
+
+.user__form:focus,
+.user__form:target
+.user__form:active {
+  background: #333;
 }
 
 .user__url {
@@ -46,7 +53,6 @@ body {
 }
 
 /* user button */
-
 .user__button {
   display: flex;
   justify-content: center;
@@ -67,47 +73,94 @@ body {
   color: #fff;
 }
 
-/* user card */
+.error-message {
+  display: none;
+}
 
-.user-card {
-  margin: 0 auto;
+/* user card */
+.card-container {
+  position: relative;
   width: 70%;
   height: 500px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 18px -1px rgba(27,129,207,0.71);
+}
+
+.user-card {
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
+  height: 500px;
   padding: 10%;
-  background: #f5f5f5;
-  border: 3px solid #e1e4e8;
+  background-color: #0366d6;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
+
+.user-card_empty {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 500px;
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #0366d6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deactive {
+  display: none;
+}
+
 /* avatar */ 
 .avatar {
-  border: 5px solid #e1e4e8;
+  border: 5px solid #fff;
+  max-width: 300px;
+  max-height: 300px;
+  margin-bottom: 5%;
 }
-/* card name */
 
+/* card name */
 .name {
-  color: #333;
-  text-decoration: underline;
+  color: aquamarine;
 }
 
 .user__name {
-  text-decoration: none;
-  color: #939393;
+  color: #fff;
 }
 
 /* card about */ 
-
 .card__about {
   display: inline-block;
 }
 
 .user__about {
-  display: inline-block;
+  color: #fff;
 }
 
 .about {
-  color: #333;
-  text-decoration: underline;
+  color: aquamarine;
+}
+
+/* preloader */
+.loader-wrapper {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 500px;
+  background: #0366d6;
+  font-size: 24px;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader-wrapper.active {
+  display: flex;
 }
