--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,6 @@ body {
   outline: none;
 }
 
-.user__form:focus,
-.user__form:target
-.user__form:active {
-  background: #333;
-}
 
 .user__url {
   margin-left: 60px;
@@ -66,6 +61,7 @@ body {
   border: 1px solid rgba(27, 31, 35, .2);
   border-radius: .25em;
   background-color: #fff;
+  transition: all .2s ease-in;
 }
 
 .user__button:hover {
@@ -81,7 +77,7 @@ body {
 .card-container {
   position: relative;
   width: 70%;
-  height: 500px;
+  height: auto;
   margin: 0 auto;
   box-shadow: 0px 0px 18px -1px rgba(27,129,207,0.71);
 }
@@ -90,8 +86,7 @@ body {
   position: absolute;
   margin: 0 auto;
   width: 100%;
-  height: 500px;
-  padding: 10%;
+  height: auto;
   background-color: #0366d6;
   display: flex;
   justify-content: center;
@@ -99,6 +94,10 @@ body {
   flex-direction: column;
 }
 
+.current-date {
+  color: #fff;
+  margin: 20px 0;
+}
 
 .user-card_empty {
   position: absolute;
@@ -135,6 +134,11 @@ body {
   color: #fff;
 }
 
+.card__name,
+.card__about {
+  text-align: center;
+}
+
 /* card about */ 
 .card__about {
   display: inline-block;
@@ -146,6 +150,7 @@ body {
 
 .about {
   color: aquamarine;
+  margin-bottom: 5%;
 }
 
 /* preloader */
@@ -163,4 +168,4 @@ body {
 
 .loader-wrapper.active {
   display: flex;
-}
+} 
